--- a/SitoPassione/stylesoloheaderefooter.css
+++ b/SitoPassione/stylesoloheaderefooter.css
@@ -1,4 +1,5 @@
 html,body{height:100%;}
+body{background: #50505007;}
 
 
 /*-----------------------------
@@ -21,3 +22,51 @@ footer
 
 .footer{background: #4e4e4e9a; padding:30px;color:#fff; margin-top: 40px; font-family:'Varela Round', sans-serif; font-size: 22px}
 .footer-text{font-size: 22px; color: #454647;}
+
+/*-----------------------------
+tablet
+-----------------------------*/
+@media (max-width: 998px){
+	/* banner */
+	.banner__image,
+	.banner__copy{width:50%;height:100%}
+
+}
+
+
+/*-----------------------------
+smartphone
+-----------------------------*/
+@media (max-width: 767px){
+
+	.header{position:fixed; z-index: 100;width:100%}
+	.header__icon-bar{display: block;}
+
+	.header__menu{width:100%;height:0px; overflow: hidden;}
+	.header__menu__item{display: block;}
+	.is-open{height:300px; overflow: auto;}
+}
+
+
+/*-----------------------------
+clearfix - sfondo header grigio
+-----------------------------*/
+
+.clearfix:after {
+	visibility: hidden;
+	display: block;
+	font-size: 0;
+	content: " ";
+	clear: both;
+	height: 0;
+	}
+* html .clearfix             { zoom: 1; } /* IE6 */
+*:first-child+html .clearfix { zoom: 1; } /* IE7 */
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+     -moz-box-sizing: border-box;
+          box-sizing: border-box;
+}
